fix(sbb-seat-reservation): correct gap behaviour in vertical navigation (#4599)
## Preflight Checklist

<!-- Please ensure you've completed the following steps by replacing [ ]
with [x]-->

- [ ] I have read the [Contributing
Guidelines](https://github.com/sbb-design-systems/lyne-components/blob/main/docs/CONTRIBUTING.md)
for this project.
- [ ] I agree to follow the [Code of
Conduct](https://github.com/sbb-design-systems/lyne-components/blob/main/docs/CODE_OF_CONDUCT.md)
that this project adheres to.
- [ ] I have searched the [pull request
tracker](https://github.com/sbb-design-systems/lyne-components/pulls)
for a Pull Request (PR) that matches the one I want to submit, without
success.

## Issue

This PR Closes #

## Pull request checklist

Please check if your PR fulfills the following requirements:

- [ ] Tests for the changes have been added (for bug fixes / features)
- [ ] Docs have been reviewed and added / updated if needed (for bug
fixes / features)

See [Review Guidelines](../docs/REVIEW.md) for more information on what
is checked during the review process.

## Changes

Changes in this pull request:

-

## Browsers

I tested the build on the following browsers:

- [ ] Firefox Desktop
- [ ] Chrome Desktop
- [ ] Edge Desktop
- [ ] Safari Desktop
- [ ] Chrome Mobile
- [ ] Safari Mobile

## Screen readers

I tested the build on the following browsers:

- [ ] JAWS Firefox Desktop
- [ ] JAWS Chrome Desktop
- [ ] NVDA Firefox Desktop
- [ ] NVDA Chrome Desktop
- [ ] VoiceOver Safari Desktop
- [ ] VoiceOver Chrome Desktop
- [ ] VoiceOver Safari Mobile
- [ ] Android Accessibility Suite Chrome Mobile

## Pull request type

<!-- Please do not submit updates to dependencies unless it fixes an
issue. -->

<!-- Please try to limit your pull request to one type, submit multiple
pull requests if needed. -->

Please check the type of change your PR introduces:

- [ ] Bugfix
- [ ] Feature
- [ ] Code style update (formatting, renaming)
- [ ] Refactoring (no functional changes

--- a/src/elements-experimental/seat-reservation/seat-reservation-navigation-services/seat-reservation-navigation-services.scss
+++ b/src/elements-experimental/seat-reservation/seat-reservation-navigation-services/seat-reservation-navigation-services.scss
@@ -5,7 +5,7 @@
   display: flex;
   flex-direction: row;
   justify-content: center;
-  column-gap: var(--sbb-spacing-fixed-2x);
+  gap: var(--sbb-spacing-fixed-2x);
   overflow: hidden;
   line-height: normal;
   color: light-dark(var(--sbb-color-granite), var(--sbb-color-graphite));
@@ -15,11 +15,11 @@
   &:has(:nth-child(n + 3 of .auto-width)) {
     // adjustment for silence- and business-icons
     &:has([name^='SILENCE'], [name^='BUSINESS']) {
-      column-gap: sbb-sr-functions.sr-px-to-rem(6);
+      gap: sbb-sr-functions.sr-px-to-rem(6);
 
       // bicycle icon only needs further adjustment when combined with silence- and business-icons
       &:has([name^='BICYCLE']) {
-        column-gap: sbb-sr-functions.sr-px-to-rem(3);
+        gap: sbb-sr-functions.sr-px-to-rem(3);
       }
     }
   }
